fix: StepTestLogo spacing and size fix

--- a/src/styles/component/StepTestLogo.module.scss
+++ b/src/styles/component/StepTestLogo.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    @apply text-6xl font-bold tracking-[-.2rem] p-1 m-1 cursor-default transition-all ease-in-out duration-200;
+    @apply text-6xl font-bold tracking-[-.2rem] cursor-default transition-all ease-in-out duration-200 w-fit;
 
     &:hover {
         animation: fade-through 4s ease-in-out .2s infinite alternate;
